--- a/src/event.module.css
+++ b/src/event.module.css
@@ -1,13 +1,16 @@
 .event{
     border-radius: 10px;
     font-family: Times New Roman;
-    box-shadow: 0px 5px 20px rgb(71, 67, 67);
-    margin: 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-around; 
-    background: white;
+    background-color: rgba(0, 0, 0, 0.5); 
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8); 
     align-items: center;
     min-width: 50%;
     flex-wrap: wrap;
 }
+
+
+
+  
