--- a/src/event.module.css
+++ b/src/event.module.css
@@ -1,5 +1,3 @@
-
-
 .event{
     border-radius: 10px;
     display: flex;
@@ -12,6 +10,8 @@
     flex-wrap: wrap;
     color: white;
     font-family: Times New Roman;
+    margin-bottom: 20px;
+    
 
 }
 
@@ -41,5 +41,8 @@
     font-size: 19px;
     font-family: 'Times New Roman';
     color: white;
+    background-color: rgba(0, 0, 0, 0.5); 
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
+    border-radius: 10px; 
 }
 
